# crm

./: Cargo.toml  cliff.toml
.github/workflows/: build.yml
crm/: Cargo.toml  build.rs  crm.yml
crm-metadata/: Cargo.toml  build.rs  metadata.yml
crm-metadata/src/: lib.rs  main.rs
crm-metadata/src/abi/: mod.rs
crm-metadata/src/pb/: metadata.rs
crm-send/: Cargo.toml  send.yml
crm-send/src/: lib.rs  main.rs
crm-send/src/abi/: email.rs  in_app.rs  mod.rs  sms.rs
crm-send/src/pb/: notification.rs
crm/src/: client.rs  lib.rs  server.rs
crm/src/abi/: mod.rs
crm/src/pb/: user_stats.rs
fixtures/: cert.pem  key.pem  nginx.conf  rootCA.pem
protos/crm/: messages.proto  rpc.proto
protos/metadata/: messages.proto  rpc.proto
protos/notification/: messages.proto
protos/user-stats/: messages.proto
user-stat/: Cargo.toml  user_stat.yml
user-stat/examples/: gen.rs
user-stat/migrations/: 20240705023810_init.sql
user-stat/src/: lib.rs  main.rs
user-stat/src/abi/: mod.rs
user-stat/tests/: service.rs
