[package]
name = "crm-metadata"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { workspace = true }
fake = { version = "2.9.2", features = ["derive", "chrono"] }
anyhow = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
rand = "0.8.5"
derive_builder = "0.20.0"
futures = "0.3.30"
serde_yaml = { workspace = true }
itertools = "0.13.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-stream = "0.1.15"


[build-dependencies]
prost-build = { workspace = true }
anyhow = { workspace = true }
tonic-build = { workspace = true }
proto-builder-trait = "0.6.1"
