[package]
name = "crm-send"
version = "0.1.0"
edition = "2021"

[features]
default = []
test_utils = ["fake", "nanoid"]

[dependencies]
sqlx = { workspace = true }
fake = { version = "2.9.2", features = ["derive", "chrono"], optional = true }
nanoid = { version = "0.4.0", optional = true }
anyhow = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
derive_builder = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-stream = { workspace = true }
uuid = { version = "1.10.0", features = ["v4"] }


[build-dependencies]
prost-build = { workspace = true }
anyhow = { workspace = true }
tonic-build = { workspace = true }
proto-builder-trait = { workspace = true }

[dev-dependencies]
crm-send = { workspace = true, features = ["test_utils"] }
