[package]
name = "crm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"


[dependencies]
anyhow = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
derive_builder = { workspace = true }
user-stat = { workspace = true }
crm-metadata = { workspace = true }
crm-send = { workspace = true }
tracing.workspace = true
tracing-subscriber = "0.3.18"
serde = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
uuid = { version = "1.10.0", features = ["v4"] }

[build-dependencies]
prost-build = { workspace = true }
anyhow = { workspace = true }
tonic-build = { workspace = true }
proto-builder-trait = { workspace = true }
