[package]
name = "user-stat"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { workspace = true }
anyhow = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
derive_builder = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }


[build-dependencies]
prost-build = { workspace = true }
anyhow = { workspace = true }
tonic-build = { workspace = true }
proto-builder-trait = { workspace = true }


[dev-dependencies]
fake = { version = "2.9.2", features = ["derive", "chrono"] }
nanoid = "0.4.0"
